// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App App Component should match the snapshot 1`] = `
<div
  className="App"
>
  <Connect(Header) />
  <Connect(NavBar) />
  <Connect(CardArea) />
</div>
`;

exports[`App App Component should match the snapshot when isLoading is true 1`] = `
<div
  className="App"
>
  <Connect(Header) />
  <Connect(NavBar) />
  <Connect(CardArea) />
  <Loading />
</div>
`;

exports[`App App Component should match the snapshot with an error in props 1`] = `
<div
  className="App"
>
  <Connect(Header) />
  <Connect(NavBar) />
  <Connect(CardArea) />
  <Error />
</div>
`;
